# Orbi

./: .dockerignore  .gitignore  Dockerfile  Plan.txt  country_en_to_he.json  pyproject.toml  readme.md  travel_warnings_cache.json
app/: agent.py  facts_policy.py  graph.py  main.py  tools.py
app/agents/: agent.py
app/config/: logger.py  settings.py  state.py
app/data/: country_en_to_he.json
app/domain/: _israeli_embassies_cache.json  amadeus_auth.py  amadeus_client.py  city_geocoding.py  climate.py  embassies.py  entry_requirements.py  (+7 more)
tests/: countries.py  english_names.txt  hebrew_names.txt  temp.py  test_agent.py  test_amadeus.py  test_climate.py  test_search_flights.py  test_time.py  test_tools.py  test_travel_weather.py  test_verifier.py  travel_reco.py
transcripts/: 1) I am thinking about going to Ireland 1 day after silvester - anything important i should know.txt  1. is April a good time to travel to Tokyo.txt  2) Yes please recommend me what to do around dublin, and also find me a flight from tel aviv to dublin.txt  2. What are the best activities to do there.txt  3) lets say some emergency happen and i need to contact my country representatives there. who can i talk with.txt  3. What are the available flights from TLV to HND on December 28th, 2025.txt  4) What food is Ireland famous for.txt  4. What will be the time in Tokyo when i land there, 8 hours from now.txt  5) Do you think a book is a good gift for a friend's birthday.txt  5. example of off-topic question.txt  6. example of using the conversation history.txt  FULL CONVERSATION TRANSCRIPT.txt
(+40 files in other folders)
