[project]
name = "Orbi"
version = "0.1.0"
description = "Conversational travel agent"
requires-python = ">=3.10"
dependencies = [
    "langchain[anthropic,google-genai,openai]>=1.2.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]