[project]
name = "Orbi"
version = "0.1.0"
description = "Conversational travel agent"
requires-python = ">=3.10"
dependencies = [
    "langchain-google-genai>=4.0.0",
    "langchain-google-vertexai>=3.2.0",
    "langchain-openai>=1.1.3",
    "langchain[anthropic,google-genai,openai]>=1.2.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
